[package]
name = "rwui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
chrono = "0.4.31"
glium = "0.36.0"
rwcommon = { path = "../rwcommon", version = "0.1.0" }
rwcompute = { path = "../rwcompute", version = "0.1.0" }
rwgfx = { path = "../rwgfx", version = "0.1.0" }
rwlog = { path = "../rwlog", version = "0.1.0" }
